[package]
name = "rtcm-rs"
version = "0.5.0"
authors = ["Martin Håkansson <martinhakansson@yahoo.com>"]
categories = ["encoding", "no-std"]
description = "Encoding/decoding of RTCM v. 3"
keywords = ["rtcm","no_std","serde","serialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinhakansson/rtcm-rs.git"
edition = "2021"
exclude = [
    "tests/*",
    "testdata/*",
    "examples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec =  { version = "1.6.0", features=["rustc_1_55"]}
crc-any = { version = "2.4.3", default-features = false }
sd = { version = "1.0", optional = true, default-features = false, features = ["derive"], package="serde" }
rand = { version = "0.8.5", optional = true}

[features]
serde = ["sd","tinyvec/serde"]
test_gen = ["rand"]
default = ["all_msgs"]
all_msgs = [
    "msg1001",
    "msg1005",
    "msg1006",
    "msg1007",
    "msg1008",
    "msg1013",
    "msg1019",
    "msg1020",
    "msg1029",
    "msg1030",
    "msg1032",
    "msg1033",
    "msg1041",
    "msg1042",
    "msg1044",
    "msg1045",
    "msg1046",
    "msg1057",
    "msg1071",
    "msg1072",
    "msg1073",
    "msg1074",
    "msg1075",
    "msg1076",
    "msg1077",
    "msg1081",
    "msg1082",
    "msg1083",
    "msg1084",
    "msg1085",
    "msg1086",
    "msg1087",
    "msg1091",
    "msg1092",
    "msg1093",
    "msg1094",
    "msg1095",
    "msg1096",
    "msg1097",
    "msg1101",
    "msg1102",
    "msg1103",
    "msg1104",
    "msg1105",
    "msg1106",
    "msg1107",
    "msg1111",
    "msg1112",
    "msg1113",
    "msg1114",
    "msg1115",
    "msg1116",
    "msg1117",
    "msg1121",
    "msg1122",
    "msg1123",
    "msg1124",
    "msg1125",
    "msg1126",
    "msg1127",
    "msg1230",
]
msg1001 = []
msg1005 = []
msg1006 = []
msg1007 = []
msg1008 = []
msg1013 = []
msg1019 = []
msg1020 = []
msg1029 = []
msg1030 = []
msg1032 = []
msg1033 = []
msg1041 = []
msg1042 = []
msg1044 = []
msg1045 = []
msg1046 = []
msg1057 = []
msg1071 = []
msg1072 = []
msg1073 = []
msg1074 = []
msg1075 = []
msg1076 = []
msg1077 = []
msg1081 = []
msg1082 = []
msg1083 = []
msg1084 = []
msg1085 = []
msg1086 = []
msg1087 = []
msg1091 = []
msg1092 = []
msg1093 = []
msg1094 = []
msg1095 = []
msg1096 = []
msg1097 = []
msg1101 = []
msg1102 = []
msg1103 = []
msg1104 = []
msg1105 = []
msg1106 = []
msg1107 = []
msg1111 = []
msg1112 = []
msg1113 = []
msg1114 = []
msg1115 = []
msg1116 = []
msg1117 = []
msg1121 = []
msg1122 = []
msg1123 = []
msg1124 = []
msg1125 = []
msg1126 = []
msg1127 = []
msg1230 = []