[package]
name = "rtcm-rs"
version = "0.10.0"
authors = ["Martin Håkansson <martinhakansson@yahoo.com>"]
categories = ["encoding", "no-std"]
description = "Encoding/decoding of RTCM v. 3"
keywords = ["rtcm","no_std","serde","serialization","gnss"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinhakansson/rtcm-rs.git"
edition = "2021"
rust-version = "1.66.1"
exclude = [
    "tests/*",
    "testdata/*",
    "examples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec =  { version = "1.6.0", features=["rustc_1_55"]}
crc-any = { version = "2.4.3", default-features = false }
sd = { version = "1.0", optional = true, default-features = false, features = ["derive"], package="serde" }
rand = { version = "0.8.5", optional = true}

[features]
serde = ["sd","tinyvec/serde"]
test_gen = ["rand"]
std = []
default = ["all_msgs","std"]
all_msgs = [
    "msg1001",
    "msg1002",
    "msg1003",
    "msg1004",
    "msg1005",
    "msg1006",
    "msg1007",
    "msg1008",
    "msg1009",
    "msg1010",
    "msg1011",
    "msg1012",
    "msg1013",
    "msg1014",
    "msg1015",
    "msg1016",
    "msg1017",
    "msg1019",
    "msg1020",
    "msg1021",
    "msg1022",
    "msg1023",
    "msg1024",
    "msg1025",
    "msg1026",
    "msg1027",
    "msg1029",
    "msg1030",
    "msg1031",
    "msg1032",
    "msg1033",
    "msg1034",
    "msg1035",
    "msg1037",
    "msg1038",
    "msg1039",
    "msg1041",
    "msg1042",
    "msg1044",
    "msg1045",
    "msg1046",
    "msg1057",
    "msg1058",
    "msg1059",
    "msg1060",
    "msg1061",
    "msg1062",
    "msg1063",
    "msg1064",
    "msg1065",
    "msg1066",
    "msg1067",
    "msg1068",
    "msg1071",
    "msg1072",
    "msg1073",
    "msg1074",
    "msg1075",
    "msg1076",
    "msg1077",
    "msg1081",
    "msg1082",
    "msg1083",
    "msg1084",
    "msg1085",
    "msg1086",
    "msg1087",
    "msg1091",
    "msg1092",
    "msg1093",
    "msg1094",
    "msg1095",
    "msg1096",
    "msg1097",
    "msg1101",
    "msg1102",
    "msg1103",
    "msg1104",
    "msg1105",
    "msg1106",
    "msg1107",
    "msg1111",
    "msg1112",
    "msg1113",
    "msg1114",
    "msg1115",
    "msg1116",
    "msg1117",
    "msg1121",
    "msg1122",
    "msg1123",
    "msg1124",
    "msg1125",
    "msg1126",
    "msg1127",
    "msg1230",
]
msg1001 = []
msg1002 = []
msg1003 = []
msg1004 = []
msg1005 = []
msg1006 = []
msg1007 = []
msg1008 = []
msg1009 = []
msg1010 = []
msg1011 = []
msg1012 = []
msg1013 = []
msg1014 = []
msg1015 = []
msg1016 = []
msg1017 = []
msg1019 = []
msg1020 = []
msg1021 = []
msg1022 = []
msg1023 = []
msg1024 = []
msg1025 = []
msg1026 = []
msg1027 = []
msg1029 = []
msg1030 = []
msg1031 = []
msg1032 = []
msg1033 = []
msg1034 = []
msg1035 = []
msg1037 = []
msg1038 = []
msg1039 = []
msg1041 = []
msg1042 = []
msg1044 = []
msg1045 = []
msg1046 = []
msg1057 = []
msg1058 = []
msg1059 = []
msg1060 = []
msg1061 = []
msg1062 = []
msg1063 = []
msg1064 = []
msg1065 = []
msg1066 = []
msg1067 = []
msg1068 = []
msg1071 = []
msg1072 = []
msg1073 = []
msg1074 = []
msg1075 = []
msg1076 = []
msg1077 = []
msg1081 = []
msg1082 = []
msg1083 = []
msg1084 = []
msg1085 = []
msg1086 = []
msg1087 = []
msg1091 = []
msg1092 = []
msg1093 = []
msg1094 = []
msg1095 = []
msg1096 = []
msg1097 = []
msg1101 = []
msg1102 = []
msg1103 = []
msg1104 = []
msg1105 = []
msg1106 = []
msg1107 = []
msg1111 = []
msg1112 = []
msg1113 = []
msg1114 = []
msg1115 = []
msg1116 = []
msg1117 = []
msg1121 = []
msg1122 = []
msg1123 = []
msg1124 = []
msg1125 = []
msg1126 = []
msg1127 = []
msg1230 = []
